--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,13 +1,54 @@
+/* -- Google Fonts -- */
+@import url(https://fonts.googleapis.com/css?family=Raleway:200,100);
+/* -- Google Fonts -- */
+
+
 .navbar {
 	border-radius:0;
-	font-family: "Helvetica Neue", Helvetica;
+	font-family: "Helvetica Neue", Arial;
 	font-weight: 200;
 	box-shadow: 0px 1px 3px #2a2a2a;
-	background:url('dark_wood.png');
+	background:url('dark_wood.png')	;
 }
 
 .navbar-inverse a.navbar-brand {
-	font-family: "Helvetica Neue", Helvetica;
+	font-family: "Helvetica Neue", Arial;
 	font-weight: 100;
 	color:white;
+}
+
+.hero {
+  background: url('hero.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height:370px;
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.frosty {
+	background:rgba(0,0,0, 0.5);
+  color:white;
+}
+
+/* REMOVE whitespace */
+h1, h2, h3, h4, h5, h6, .navbar {
+  margin:0;
+}
+
+.frosty h1 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+  text-shadow: rgba(0,0,0,0.95) 1px 1px;
+}
+
+.frosty h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  text-shadow: rgba(0,0,0,0.95) 1px 1px;
+}
+
+.btn {
+  border-radius:0;
 }
