--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,15 @@
   </div><!-- /.container-fluid -->
 </nav>
 <%# NAV BAR END ------------------------------------------------------------------------------------------ %>
-
-
+<% if notice.present? %>
+  <p class="alert alert-info"><%= notice %></p>
+<% end %>
+<% if alert.present? %>
+  <p class="alert alert-danger"><%= alert %></p>
+<% end %>
 
 <%= yield %>
 
 </body>
 </html>
+
