--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="hero">
   <br />
-  <div class="frosty col-xs-10 col-xs-offset-1 text-center">
+  <div class="frosty col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 text-center">
     <br />
     <h1>Learn Agriculture</h1>
     <br />
