--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,11 +2,11 @@
   <br />
   <div class="frosty col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 text-center">
     <br />
-    <h1>Learn Agriculture</h1>
+    <h1>Learn Horticulture</h1>
     <br />
-    <h2>Grow your own food, anywhere.</h2>
+    <h2>Grow your own food, almost anywhere.</h2>
     <br />
-    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
   </div>
 </div>
