--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -7,13 +7,26 @@
 	<div class="text-center">
 		<%= link_to "Add a new section...", new_instructor_course_section_path(@course), class: 'btn btn-success btn-lg' %>
 	</div>
-
+  <br />
+  <br />
+  <hr />
 	<ul>
 		<% @course.sections.each do |section| %>
 			<li>
 				<%= section.title %>
+        <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-success btn-xs' %>
+        <ul>
+          <% section.lessons.each do |lesson| %>
+            <li>
+              <b><%= lesson.title %></b>
+              -
+              <%= lesson.subtitle %>
+            </li>
+          <% end %>
+        </ul>
+        <br class="clr" />
 			</li>
 		<% end %>
 	</ul>
-	
+
 </div>
