--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -8,6 +8,8 @@
     <br />
     <%= f.input :cost %>
     <br />
+    <%= f.input :image %>
+    <br />
     <%= f.submit "Create", class: 'btn btn-success' %>
     <br />
   <% end %>
