--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -82,3 +82,27 @@ body {
   padding:8px;
   margin:10px;
 }
+
+.lesson {
+  background-color:black;
+  margin-top:10px;
+  height:130px;
+}
+
+.lesson a{
+  color:white;
+  font-family:Raleway;
+  font-weight:100;
+  font-size: 20px;
+}
+
+.lesson a b {
+  font-weight: 100;
+  font-size: 30px;
+}
+
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
