--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -16,6 +16,13 @@
     <% end %>
     <br />
     <br />
+
+    <!-- Check for Enrollment -->
+    <% if current_user && current_user.enrolled_in?(@course) %>
+      <h3 class="label label-warning">You Are Enrolled</h3>
+      <% else %>
+    <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+      <% end %>
 	</div>
 
 	<div class="col-sm-8 col-xs-12%">
