Add drag reorganization to sections in instructor show pages.

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,6 @@
 <script>
-
+  
+  // Lesson Drag Functionality
 	$(function () {
 		$('.lessons').sortable({
   		update: function( event, ui ) {
@@ -12,6 +13,21 @@
       }
 		});
 	});
+
+  // Section Drag Functionality
+  $(function () {
+  $('.sections').sortable({
+    update: function( event, ui ) {
+      $.ajax({
+        type: 'PUT',
+        url: ui.item.data('update-url'),
+        dataType: 'json',
+        data: { lesson: { row_order_position: ui.item.index() } }
+      });
+    }
+  });
+});
+
 </script>
 
 <br />
@@ -27,9 +43,9 @@
   <br />
   <br />
   <hr />
-	<ul>
-		<% current_course.sections.each do |section| %>
-			<li>
+	<ul class="sections">
+		<% current_course.sections.rank(:row_order).each do |section| %>
+			<li data-update-url="<%= instructor_section_path(section) %>">
 				<%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-success btn-xs' %>
         <ul class="lessons">
