--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -91,7 +91,7 @@ body {
 
 .lesson a{
   color:white;
-  font-family:Raleway;
+  font-family:Raleway, sans-serif;
   font-weight:100;
   font-size: 20px;
 }
@@ -105,4 +105,42 @@ body {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding:20px;
+  margin:20px;
+}
+
+ul .header {
+  font-size:25px;
+}
+
+ul .header .glyphicon {
+  font-size:15px;
+}
+
+.lessons li {
+  background:black;
+  color:white;
+  margin:10px;
+  font-family:Raleway, sans-serif;
+  font-weight: 100;
+  padding:8px;
+  font-size:15px;
+}
+
+.lessons li b {
+  font-size:25px;
+  font-weight:100;
+}
+
+.lessons li p {
+  margin:0;
 }
