--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,21 +36,21 @@
 
         <!-- ITEM   -->
         <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-            <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
-          <% else %>
+          <% if user_signed_in? == false %>
             <li><%= link_to 'Log in', new_user_session_path %></li>
           <% end %>
 
           <!-- ITEM  -->
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboard <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li><%= link_to 'My Dashboard', dashboard_path %></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <% if user_signed_in? %>
+                <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+              <% else %>
+                <li><%= link_to 'Log in', new_user_session_path %></li>
+              <% end %>
             </ul>
           </li>
         </ul>
