Finishing touches on footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,13 +71,44 @@
 
 <br class='clr' />
 
-<div id="footer">
-  <div class="container">
-    <b>Teachers</b>
-    <br />
-    <%= link_to 'Teach a Course', new_instructor_course_path %>
+  <div id="footer">
+    <div class="container">
+      <div class="col-xs-12 col-sm-3">
+        <b>Teachers</b>
+        <br />
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+        eric.crescioni@gmail.com
+        <br />
+        San Juan, PR
+      </div>
+      <div class="col-xs-12 col-sm-3 social">
+        <b>Social</b>
+        <br />
+        <br />
+        <%= link_to 'http://github.com/ecam900' do %>
+          <%= image_tag 'Github.png', class: 'social-button' %>
+        <% end %>
+        <%= link_to 'http://facebook.com/ericcrescioni' do %>
+         <%= image_tag 'facebook.png', class: 'social-button' %>
+        <% end %>
+      </div>
+    </div>
   </div>
-</div>
 
 </body>
 </html>
