--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,16 +13,37 @@
 
 <br />
 <div class="col-xs-10 col-xs-offset-1 features text-center">
-  <div class="col-sm-4">
-    <h3>Feature 1</h3>
-  </div>
+  <div class="booyah-box col-sm-4">
+    <h3>Learn What Works For You</h3>
+    <br />
+    <span style="font-size:4.5em;" class="glyphicon glyphicon-leaf"></span>
+    <br class='clr'>
+    <br />
+    <p> Choose from different courses
+    for different environments and
+    spaces. Except the Arctic. Sorry, Arctic. </p>
+    </div>
 
-  <div class="col-sm-4">
-    <h3>Feature 2</h3>
-  </div>
+  <div class="booyah-box col-sm-4">
+    <h3>Teach A Course</h3>
+    <br />
+    <span style="font-size:4.5em;" class="glyphicon glyphicon-education"></span>
+    <br class='clr'>
+    <br />
+    <p> Have skills to share? Share your
+    awesome knowledge with everyone. Make money
+    or charge nothing, your choice! </p>
+    </div>
 
-  <div class="col-sm-4">
-    <h3>Feature 3</h3>
-  </div>
+  <div class="booyah-box col-sm-4">
+    <h3>Lifetime Access</h3>
+    <br />
+    <span style="font-size:4.5em;" class="glyphicon glyphicon-book"></span>
+    <br class='clr'>
+    <br />
+    <p> Once you're enrolled in a course,
+    you have access for life. No time limit
+    to finish the course, either! </p>
+    </div>
 </div>
 
