--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
               <li><%= link_to 'My Dashboard', dashboard_path %></li>
               <li role="separator" class="divider"></li>
               <% if user_signed_in? %>
-                <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+                <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
               <% else %>
                 <li><%= link_to 'Log in', new_user_session_path %></li>
               <% end %>
