Change home page boxes to min-height so that they don't morph.

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,7 +13,7 @@
 
 <br />
 <div class="col-xs-10 col-xs-offset-1 features text-center">
-  <div class="booyah-box col-sm-4">
+  <div class="glyphbox col-sm-4">
     <h3>Learn What Works For You</h3>
     <br />
     <span style="font-size:4.5em;" class="glyphicon glyphicon-leaf"></span>
@@ -24,7 +24,7 @@
     spaces. Except the Arctic. Sorry, Arctic. </p>
     </div>
 
-  <div class="booyah-box col-sm-4">
+  <div class="glyphbox col-sm-4">
     <h3>Teach A Course</h3>
     <br />
     <span style="font-size:4.5em;" class="glyphicon glyphicon-education"></span>
@@ -35,7 +35,7 @@
     or charge nothing, your choice! </p>
     </div>
 
-  <div class="booyah-box col-sm-4">
+  <div class="glyphbox col-sm-4">
     <h3>Lifetime Access</h3>
     <br />
     <span style="font-size:4.5em;" class="glyphicon glyphicon-book"></span>
